--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <p>The canonical source for LibreMetaverse (as well as the bug tracker) can be
 found at:
-https://bitbucket.org/cinderblocks/libremetaverse</p>
+          <a href="https://bitbucket.org/cinderblocks/libremetaverse"> Cinder Roxleys Repo</a></p>
 
         
       </header>
