--- a/index.html
+++ b/index.html
@@ -14,11 +14,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>LMV</h1>
+        <h1><a href="https://github.com/IMA-DZ/LMV">LMV on GitHub <small></small></a></h1>
         <p>This is a local fork of LibreMetaverse  for IMA  testing   </p>
-
-        
-          <p class="view"><a href="https://github.com/IMA-DZ/LMV">View the Project on GitHub <small></small></a></p>
         
 
         <p>The canonical source for LibreMetaverse (as well as the bug tracker) can be
