--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ found at:
           <a href="https://bitbucket.org/cinderblocks/libremetaverse"> Cinder Roxleys Repo</a></p>
 
         <p>The canonical source for LibOpenMetaverse  can be found at:
-         <a href="https://github.com/openmetaversefoundation/libopenmetaverse> OpenMetaverseFoundation Repo</a></p>
+         <a href="https://github.com/openmetaversefoundation/libopenmetaverse"> OpenMetaverseFoundation Repo</a></p>
                   
       </header>
       <section>
